--- a/views/pages/my-projects.pug
+++ b/views/pages/my-projects.pug
@@ -37,6 +37,8 @@ block content
           span.layout-margin-horz-left-large.layout-inline-block= " "
           span.layout-inline.layout-margin-dull As a mechatronics engineer I am adept at electrical, mechanical, and robotics, this allows me to take on a variety of projects, some more electrical, some robotic, etc...
           p.layout-inline.layout-margin-dull(lorem="3")
+          span.layout-inline.layout-margin-dull  Some more electrical, lorem ipsum dolor,
+          span.layout-inline.layout-margin-dull= " "
           +link({
             href: "/",
             class: "layout-margin-horz-left-mini",
