--- a/views/pages/projects/nasa.pug
+++ b/views/pages/projects/nasa.pug
@@ -37,10 +37,12 @@ block content
           span.layout-margin-horz-left-large.layout-inline-block= " "
           span.layout-inline.layout-margin-dull(lorem="1")
           p.layout-inline.layout-margin-dull(lorem="3")
+          span.layout-inline.layout-margin-dull  Some more electrical, lorem ipsum dolor,
+          span.layout-inline.layout-margin-dull= " "
           +link({
             href: "/",
             class: "layout-margin-horz-left-mini",
-            content: "Wanna go back home?"
+            content: "wanna go back home?"
           })
 
   //- Next page layer
