--- a/views/app.pug
+++ b/views/app.pug
@@ -137,6 +137,7 @@ html(lang="en" itemscope="" itemtype="https://schema.org/WebPage")
     meta(name="theme-color", content="#2d22ca")
     meta(name="twitter:card", content="summary")
     meta(name="application-name", content="Joseph Ojo")
+    meta(name="msapplication-tap-highlight" content="no")
     meta(name="msapplication-TileColor", content="#2d22ca")
     meta(name="apple-mobile-web-app-capable", content="yes")
     meta(name="apple-mobile-web-app-title", content="Joseph Ojo")
