--- a/src/scss/components/base.scss
+++ b/src/scss/components/base.scss
@@ -16,7 +16,7 @@
 
 html,
 body {
-    text-rendering: optimizeLegibility;
+    text-rendering: optimizeSpeed;
     font-family: $regular-font;
     word-wrap: break-word;
     line-height: 1.15;
