--- a/views/app.pug
+++ b/views/app.pug
@@ -149,6 +149,8 @@ html(lang="en" itemscope="" itemtype="https://schema.org/WebPage")
     link(rel="icon", type="image/png", sizes="32x32", href="/favicon/favicon-32x32.png")
     link(rel="icon", type="image/png", sizes="16x16", href="/favicon/favicon-16x16.png")
 
+    link(rel="preload" href="/fonts/roboto--regular_latin.woff2" as="font")
+    link(rel="preload" href="/fonts/montserrat--extrabold_latin.woff2" as="font")
     link(rel="stylesheet" href="/css/app.min.css" ph-inline)
 
     //- <!--[if lt IE 9]>
