--- a/src/scss/app.scss
+++ b/src/scss/app.scss
@@ -272,7 +272,7 @@ $sizes: (
     @include propertyList($property, $name, $colors, true, "focus");
 }
 
-@import "./components/fonts.scss";
+// @import "./components/fonts.scss";
 @import "./components/base.scss";
 @import "./components/navbar.scss";
 @import "./components/style.scss";
