Alt is visible via figcaption, logo is centered

--- a/src/scss/components/layer.scss
+++ b/src/scss/components/layer.scss
@@ -124,6 +124,7 @@
             img {
                 transform: scale(1.2);
                 min-width: 500px;
+                padding: 10%;
             }
         }
 
