--- a/views/components/banner.pug
+++ b/views/components/banner.pug
@@ -1,25 +1,26 @@
 include /components/image.pug
 
 mixin banner(value = {})
-	- let { content, title, image } = value;
-	- Object.assign(image, { class: "effect-parallax hero-img" });
+  - let { content, title, image } = value;
+  - Object.assign(image, { class: "effect-parallax hero-img" });
 
-	.layer.layer-hero-id
-		article.layout-padding-bottom.layout-padding-dull-top
-			.layer-hero.banner-mode
-				+image(image)
+  .layer.layer-hero-id
+    article.layout-padding-bottom.layout-padding-dull-top
+      .layer-hero.banner-mode
+        +image(image)
 
-				.layout-padding-horz-default--device-lt-tablet.layout-padding-horz-sub-large--device-lt-laptop.layout-padding-vert-sub-extra-large--device-lt-tablet.layout-padding-vert-huge--device-gt-tablet.layout-enlarge-horz.layout-flex.layout-align-items-center.layout-justify-content-center
-					.layer-content.layout-contain
-						.layer-header
-							h1.style-font-title.layer-title.style-white.style-font-weight-bolder(itemprop="headline")!= title
-						.layer-main
-							h2.style-font-family-bold.style-font-weight-300.style-white.layer-main-text(itemprop="description")!= content
-						.layout-align-self-end
-							button.layer-footer.action-btn.action-btn-hover.layer-shadow--1.layer-round.layout-padding-smallest.style-white.style-white-hover.style-white-focus.layer-hero-scroll-down(type="button" tabindex="0")
-								span.action-btn-group
-									i.action-icon.style-font-size-24(inline) expand_more
-									span.action-btn-section
-										span.action-btn-spacer
-										span.action-btn-content Scroll Down
-										span.action-btn-spacer
+        .layout-padding-horz-default--device-lt-tablet.layout-padding-horz-sub-large--device-lt-laptop.layout-padding-vert-sub-extra-large--device-lt-tablet.layout-padding-vert-huge--device-gt-tablet.layout-enlarge-horz.layout-flex.layout-align-items-center.layout-justify-content-center
+          .layer-content.layout-contain
+            .layer-header
+              h1.style-font-title.layer-title.style-white.style-font-weight-bolder(itemprop="headline")!= title
+            .layer-main
+              h2.style-font-family-bold.style-font-weight-300.style-white.layer-main-text(itemprop="description")!= content
+            .layout-align-self-end
+              button.layer-footer.action-btn.action-btn-hover.layer-shadow--1.layer-round.style-white.style-white-hover.style-white-focus.layer-hero-scroll-down(type="button" tabindex="0")
+                section.action-btn-layout.layout-padding-smallest
+                  span.action-btn-group
+                    i.action-icon.style-font-size-24(inline) expand_more
+                    span.action-btn-section
+                      span.action-btn-spacer
+                      span.action-btn-content Scroll Down
+                      span.action-btn-spacer
