--- a/src/scss/components/action.scss
+++ b/src/scss/components/action.scss
@@ -87,6 +87,7 @@
 
         &-hover &-layout {
             width: 40px !important;
+            position: relative;
             height: 40px;
 
             .action-btn-section {
