--- a/src/scss/components/layer.scss
+++ b/src/scss/components/layer.scss
@@ -345,6 +345,7 @@
 
         .layer-title,
         .layer-content {
+            color: $primary;
             color: var(--tertiary, $primary);
             text-align: center;
         }
