--- a/src/scss/app.scss
+++ b/src/scss/app.scss
@@ -148,7 +148,7 @@ $dark-colors: (
     "tertiary": $tertiary,
     "tertiary-dark": $tertiary-dark,
 
-    "background": #1c1c1f,
+    "background": #252529,
     "surface": #3b3c3e,
     "transparent": transparent,
 
