--- a/views/pages/index.pug
+++ b/views/pages/index.pug
@@ -3,8 +3,8 @@ extends /app.pug
 block content
   //- Hero layer
   +hero({
-    title: "The love of the Craft.",
-    content: "Creating the extraordinary is my dream, and my passion.",
+    title: "Joseph Ojo — Tenacious & Astute",
+    content: "Crafting the extraordinary is my passion, and my inspiration.",
     image: {
       class: "effect-parallax hero-img",
       src: "cloudinary/grand-canyon",
@@ -60,7 +60,7 @@ block content
 
         section.layout-padding-top.layout-padding-bottom-large
           //- span.layout-margin-horz-left.layout-inline-block= " "
-          +p("One of my life goals is to leave everything I come in contact with better than I found it. This obviously can be difficult, but a couple of the ways I am trying to achieve this is to seize every opportunity and learn from previous mistakes... For more info")
+          +p("One of my life goals is to leave everything I come in contact with better than I found it. This obviously can be difficult, but a couple of the ways I am trying to achieve this is to seize every opportunity and learn from previous mistakes... In case you are wondering, my skills outside engineering are problem-solving, leadership, communication and conflict resolution. For more information")
           +link({
             href: "/about-me",
             class: "layout-margin-vert-dull layout-margin-left-mini",
