--- a/views/app.pug
+++ b/views/app.pug
@@ -1,5 +1,5 @@
 doctype html
-html(lang="en" itemscope="" itemtype="https://schema.org/WebPage")
+html(lang="en")
   head
     include /components/sections.pug
     include /components/layout.pug
@@ -46,6 +46,7 @@ html(lang="en" itemscope="" itemtype="https://schema.org/WebPage")
     link(rel="stylesheet" href="/css/fonts.min.css" ph-inline)
 
     meta(charset="utf-8")
+    meta(http-equiv="x-ua-compatible" content="ie=edge")
     meta(http-equiv="Accept-CH" content="DPR, Viewport-Width, Width")
     meta(http-equiv="Content-Type", content="text/html; charset=utf-8")
 
@@ -55,9 +56,9 @@ html(lang="en" itemscope="" itemtype="https://schema.org/WebPage")
         "@graph": [
           {
             "@type": "Person",
-            "@id": "#{page.websiteURL}/#person",
+            "@id": "#{defaults.websiteURL}/#person",
             "name": "Joseph Ojo",
-            "url": "#{page.websiteURL}",
+            "url": "#{defaults.websiteURL}",
             "sameAs": [
               "https://www.linkedin.com/in/o-josephojo/",
               "https://github.com/laoluojo",
@@ -66,20 +67,28 @@ html(lang="en" itemscope="" itemtype="https://schema.org/WebPage")
             "description": "#{defaults.description}",
             "logo": {
               "@type": "ImageObject",
-              "@id": "#{page.websiteURL}/#logo",
-              "url": "#{page.websiteURL}/favicon/android-chrome-512x512.png",
+              "@id": "#{defaults.websiteURL}/#logo",
+              "url": "#{defaults.websiteURL}/favicon/android-chrome-512x512.png",
               "width": 512,
               "height": 512,
               "caption": "Joseph Ojo's Logo"
             },
             "image": {
-              "@id": "#{page.websiteURL}/#logo"
-            }
+              "@id": "#{defaults.websiteURL}/#logo"
+            },
+            "contactPoint" : [
+              {
+                "@type" : "ContactPoint",
+                "url" : "#{defaults.websiteURL}",
+                "email" : "laoluojo@gmail.com",
+                "contactType" : "customer service"
+              }
+            ]
           },
           {
             "@type": "WebSite",
-            "@id": "#{page.websiteURL}/#website",
-            "url": "#{page.websiteURL}",
+            "@id": "#{defaults.websiteURL}/#website",
+            "url": "#{defaults.websiteURL}",
             "description": "#{defaults.description}",
             "sameAs": [
               "https://www.linkedin.com/in/o-josephojo/",
@@ -88,21 +97,27 @@ html(lang="en" itemscope="" itemtype="https://schema.org/WebPage")
             ],
             "name": "Joseph Ojo",
             "publisher": {
-              "@id": "#{page.websiteURL}/#person"
-            }
+              "@id": "#{defaults.websiteURL}/#person"
+            },
+            "copyrightYear" : "2020",
+            "copyrightHolder" : [
+              {
+                "@id": "#{defaults.websiteURL}/#person"
+              }
+            ]
           },
           {
             "@type": "WebPage",
-            "@id": "#{page.websiteURL}/#webpage",
-            "url": "#{page.websiteURL}",
+            "@id": "#{page.websiteURL + page.url}#webpage",
+            "url": "#{page.websiteURL + page.url}",
             "description": "#{page.description}",
             "inLanguage": "en-US",
             "name": "#{page.title}",
             "isPartOf": {
-              "@id": "#{page.websiteURL}/#website"
+              "@id": "#{defaults.websiteURL}/#website"
             },
             "about": {
-              "@id": "#{page.websiteURL}/#person"
+              "@id": "#{defaults.websiteURL}/#person"
             }
           }
         ]
@@ -112,20 +127,29 @@ html(lang="en" itemscope="" itemtype="https://schema.org/WebPage")
       meta(http-equiv="Content-Security-Policy" content="default-src 'self'; font-src 'self' data: https:; style-src 'self' 'unsafe-inline'; img-src data: 'self' https://res.cloudinary.com/ https://josephojo.com; script-src 'self' https://res.cloudinary.com/ https://polyfill.io/ 'unsafe-inline' 'unsafe-eval'; connect-src 'self'; block-all-mixed-content; upgrade-insecure-requests; base-uri 'self'; object-src 'none'; worker-src 'self'; manifest-src 'self'; media-src 'self' https://res.cloudinary.com/; form-action 'self'; frame-ancestors 'self';")
       meta(http-equiv="Feature-Policy" content="microphone 'none'; geolocation 'none'; usb 'none'; display-capture 'none'; sync-xhr 'self'; camera 'none'; battery 'none'")
 
+    meta(name="web-author" content="Okiki Ojo")
     meta(name="robots" content="index, follow")
     meta(name="copyright" content="Joseph Ojo")
+    meta(name="contact" content="laoluojo@gmail.com")
 
     meta(name="mobile-web-app-capable" content="yes")
     meta(name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale=5.0, user-scalable=yes")
     meta(name="keywords" content="Joseph Ojo, josephojo, josephojo.com, joseph, ojo, portfolio, engineer, web, mechatronics, mech, robots, UOIT, OntarioTech, tech, website, netlify, resume, projects, contact, about, oshawa, ontario, canada")
 
+    meta(name="og:locale" content="en_Us")
     meta(property="og:type" content="website")
     //- meta(name="twitter:site", content="@jo-ojo")
     meta(property="article:author" content="Joseph Ojo")
     meta(property="og:site_name" content=websiteURL.replace("https://", ""))
     meta(itemprop="image" content=`${websiteURL}/favicon/android-chrome-512x512.png`)
     meta(property="og:image" content=`${websiteURL}/favicon/android-chrome-512x512.png`)
+    meta(property="og:image:secure_url" content=`${websiteURL}/favicon/android-chrome-512x512.png`)
     meta(name="twitter:image" content=`${websiteURL}/favicon/android-chrome-512x512.png`)
+    meta(property="og:image:type" content="image/png")
+    meta(property="og:image:width" content="512")
+    meta(property="og:image:height" content="512")
+    meta(property="og:image:alt" content="Joseph Ojo's Logo")
+    meta(property="twitter:image:alt" content="Joseph Ojo's Logo")
 
     block seo
       +seo(page)
@@ -160,7 +184,7 @@ html(lang="en" itemscope="" itemtype="https://schema.org/WebPage")
     //- link(rel="dns-prefetch" href="https://cdnjs.cloudflare.com/" crossorigin)
     //- <![endif]-->
     script(src="/js/ver-check.min.js" ph-inline)
-  body
+  body(itemscope="" itemtype="https://schema.org/WebPage")
     +link({
       class: "skip-main",
       href: "#content",
