More words on the index page

--- a/views/pages/index.pug
+++ b/views/pages/index.pug
@@ -60,7 +60,7 @@ block content
 
         section.layout-padding-top.layout-padding-bottom-large
           //- span.layout-margin-horz-left.layout-inline-block= " "
-          +p("One of my life goals is to leave everything I come in contact with better than I found it. This obviously can be difficult, but a couple of the ways I am trying to achieve this is to seize every opportunity and learn from previous mistakes... In case you are wondering, my skills outside engineering are problem-solving, leadership, communication and conflict resolution. For more information")
+          +p("One of my life goals is to leave everything I come in contact with better than I found it. This obviously can be difficult, but a couple of the ways I am trying to achieve this is to seize every opportunity and learn from previous mistakes... As a child I was curious, and my parents let my curiousity bloom. In high school I discovered a passion for engineering specifically the engineering of robots (which I later found out to be <strong>Mechatronics</strong>). I am Tenacious & Astute I aim to create only the best, I stop at nothing till the image I have in my mind has been captured in the project I aim to create, I make sure the in all acts I commit too I am ready to follow through even if the going gets difficult, I make sure to think things through thoroughly so as to avoid inefficienies. The definition by the Oxford dictionary is, ​very clever and quick at seeing what to do in a particular situation, especially how to get an advantage. I believe I enbody these traits at all times, especially when working on a project. For more information")
           +link({
             href: "/about-me",
             class: "layout-margin-vert-dull layout-margin-left-mini",
