--- a/views/components/hero.pug
+++ b/views/components/hero.pug
@@ -16,7 +16,7 @@ mixin hero(value = {})
             .layer-main
               h2.style-font-family-bold.style-font-weight-300.style-white.layer-main-text(itemprop="description")!= content
             .layout-align-self-end
-              button.layer-footer.action-btn.action-btn-hover.layer-shadow--1.layer-round.style-white.style-white-hover.style-white-focus.layer-hero-scroll-down(type="button" tabindex="0")
+              button.layer-footer.action-btn.action-btn-hover.layer-shadow--1.layer-round.layer-secondary-btn.layer-hero-scroll-down(type="button" tabindex="0")
                 section.action-btn-layout.layout-padding-smallest
                   span.action-btn-group
                     i.action-icon.style-font-size-24(inline) expand_more
