--- a/views/pages/about-me.pug
+++ b/views/pages/about-me.pug
@@ -29,7 +29,7 @@ block content
     +layout({
       class: "layout-shorten layout-contain"
     })
-      +head("My story.")
+      +head("The story of Joseph Ojo.")
       +main({
         class: "layout-padding-vert-small"
       })
