--- a/views/pages/sitemap.pug
+++ b/views/pages/sitemap.pug
@@ -6,7 +6,7 @@ block pageInfo
       websiteURL,
       url: "/sitemap",
       name: "sitemap",
-      title: "Lets find you a destination, the destination of greatness!",
+      title: "Sitemap — Lets find you a destination, the destination of greatness!",
       description: "A little lost, here is a map, now where do you want to go?"
     };
 
@@ -20,7 +20,7 @@ block content
     })
       section
         +head
-          h1.h4.style-font-30--device-phone.style-primary-dark.style-bold.style-center The sitemap!
+          h1.h4.style-font-30--device-phone.style-primary-dark.style-bold.style-center The Sitemap — Lets find you a destination!
         +main
           ul
             //- Index
