--- a/views/pages/index.pug
+++ b/views/pages/index.pug
@@ -19,7 +19,7 @@ block content
     +layout({
       class: "layout-shorten layout-contain"
     })
-      +head("About me")
+      +head("About me — The story of Joseph Ojo.")
       +main({
           class: "layout-padding-top-large"
       })
@@ -77,7 +77,9 @@ block content
       +head({
           class: "style-center"
       })
-        h3.layout-padding-vert.style-bold-font.style-600.style-color-white.style-font-40--device-lt-tablet.style-font-size-larger--device-gt-phone Projects
+        h3.h3.layout-padding-vert.style-bold-font.style-600.style-color-white.style-font-40--device-lt-tablet.style-font-size-larger--device-gt-phone My projects
+          span.style-color-tertiary-dark  —
+          span  A showcase of wonders
           span.style-color-tertiary-dark .
 
   //- Breakthrough layer
