Added Expires header

--- a/views/app.pug
+++ b/views/app.pug
@@ -66,6 +66,17 @@ html(lang="en")
             ],
             "description": "#{defaults.description}",
             "jobTitle": "Mechatronics Engineer",
+            "hasOccupation": {
+              "@type": "Occupation",
+              "name": "Mechatronics Engineer",
+              "occupationLocation": "Ontario Tech University",
+              "educationRequirements": "Bachlors of Mechatronics Engineering",
+              "description": "Mechatronics, which is also called mechatronic engineering, is a multidisciplinary branch of engineering that focuses on the engineering of both electrical and mechanical systems, and also includes a combination of robotics, electronics, computer, telecommunications, systems, control, and product engineering.",
+              "mainEntityOfPage": {
+                "@type": "WebPage",
+                "@id": "#{defaults.websiteURL}/my-projects.html"
+              }
+            },
             "logo": {
               "@type": "ImageObject",
               "@id": "#{defaults.websiteURL}/#logo",
@@ -96,6 +107,13 @@ html(lang="en")
               "https://github.com/laoluojo",
               "https://www.f6s.com/olaoluwajosephojo"
             ],
+            "mainEntityOfPage": {
+              "@type": "WebPage",
+              "@id": "#{defaults.websiteURL}/my-projects.html"
+            },
+            "about": {
+              "@id": "#{defaults.websiteURL}/#person"
+            },
             "name": "Joseph Ojo",
             "publisher": {
               "@id": "#{defaults.websiteURL}/#person"
